@@ -243,7 +243,12 @@ msg_cost_spawn: '&bYou were charged %s to teleport to the town''s spawn.'
 msg_town_rename_disabled: '&bTown Renaming Disabled'
 msg_town_set_name: '&b%s renamed town to %s.'
 msg_nation_set_name: '&b%s renamed nation to %s.'
+
 msg_changed_pvp: '&cTown PVP has been %s.'
+msg_changed_public: '&cThe Town''s public status is now %s.'
+msg_changed_expl: '&cExplosions in town are now %s.'
+msg_changed_fire: '&Firespread in town is now %s.'
+
 msg_world_pvp: '&cThis world is PvP only.'
 msg_reloaded: '&2Towny''s settings were reloaded.'
 msg_give_total: '&bGave %s bonus. (Total: %s)'
@@ -254,8 +259,7 @@ msg_insuf_funds: '&cYou don''t have that much.'
 
 msg_set_town_home: '&bSuccessfully changed town''s home block to %s'
 msg_set_town_spawn: '&bSuccessfully changed town''s spawn.'
-msg_set_town_public: '&bSuccessfully set town Public: %s'
-msg_set_town_expl: '&bSuccessfully set town Explosions: %s'
+
 msg_set_perms: '&bSuccessfully changed permissions to %s.'
 msg_set_claim: '&bSuccessfully changed %s''s claimability to %s'
 msg_set_pvp: '&bSuccessfully changed %s''s PvP to %s'
@@ -334,6 +338,7 @@ msg_err_not_supported: '&cNot yet supported.'
 msg_err_invalid_input: '&cInvalid input. Use %s'
 msg_err_invalid_choice: '&cInvalid choice'
 msg_err_invalid_sub: '&cInvalid sub command.'
+msg_err_command_disable: '&cCommand disabled: Using permissions.'
 msg_err_universe_limit: '&cThe universe cannot hold any more towns.'
 msg_err_too_many_npc: '&cToo many npc''s registered.'
 msg_err_negative_money: '&cNegative money is stupid. Weirdo.'
